--- a/reper_front/app/src/main/res/drawable/top_bar.xml
+++ b/reper_front/app/src/main/res/drawable/top_bar.xml
@@ -1,59 +1,47 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="417dp"
-    android:height="125dp"
+    android:height="117dp"
     android:viewportWidth="417"
-    android:viewportHeight="125">
+    android:viewportHeight="117">
   <path
-      android:pathData="M0.53,0h416.94v116.38h-416.94z"
-      android:fillColor="#558948"/>
+      android:pathData="M0,0h416.94v116.38h-416.94z"
+      android:fillColor="#E2B656"/>
   <group>
     <clip-path
-        android:pathData="M0.53,0h416.94v116.38h-416.94z"/>
+        android:pathData="M0,0h416.94v116.38h-416.94z"/>
     <path
-        android:pathData="M522.72,171.03a135.61,216.57 90,1 0,-433.13 -0a135.61,216.57 90,1 0,433.13 -0z"
+        android:pathData="M522.19,171.03a135.61,216.57 90,1 0,-433.13 -0a135.61,216.57 90,1 0,433.13 -0z"
         android:fillAlpha="0.3">
       <aapt:attr name="android:fillColor">
         <gradient 
-            android:startX="414.7"
+            android:startX="414.17"
             android:startY="59.37"
-            android:endX="365.85"
+            android:endX="365.32"
             android:endY="228.54"
             android:type="linear">
-          <item android:offset="0" android:color="#666AB65D"/>
-          <item android:offset="1" android:color="#662F5029"/>
+          <item android:offset="0" android:color="#66FFBD42"/>
+          <item android:offset="1" android:color="#66BEBDB7"/>
         </gradient>
       </aapt:attr>
     </path>
     <path
-        android:pathData="M489.32,167.99a101.2,140.16 90,1 0,-280.32 -0a101.2,140.16 90,1 0,280.32 -0z"
+        android:pathData="M488.79,167.99a101.2,140.16 90,1 0,-280.32 -0a101.2,140.16 90,1 0,280.32 -0z"
         android:fillAlpha="0.3">
       <aapt:attr name="android:fillColor">
         <gradient 
-            android:startX="322.36"
+            android:startX="321.83"
             android:startY="100.11"
-            android:endX="365.27"
+            android:endX="364.74"
             android:endY="233.61"
             android:type="linear">
-          <item android:offset="0" android:color="#FF6AB65D"/>
-          <item android:offset="1" android:color="#FF2F5029"/>
+          <item android:offset="0" android:color="#FFFFD08B"/>
+          <item android:offset="1" android:color="#FFFFAE00"/>
         </gradient>
       </aapt:attr>
     </path>
     <path
-        android:pathData="M209,-53.64a97.15,219.6 90,1 0,-439.21 -0a97.15,219.6 90,1 0,439.21 -0z"
-        android:fillAlpha="0.4">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="-10.6"
-            android:startY="43.52"
-            android:endX="-10.6"
-            android:endY="-150.79"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF5F9E54"/>
-          <item android:offset="1" android:color="#FF558948"/>
-        </gradient>
-      </aapt:attr>
-    </path>
+        android:pathData="M208.47,-53.64a97.15,219.6 90,1 0,-439.21 -0a97.15,219.6 90,1 0,439.21 -0z"
+        android:fillColor="#E7BB64"/>
   </group>
 </vector>
