--- a/reper_front/app/src/main/res/layout/fragment_my_page.xml
+++ b/reper_front/app/src/main/res/layout/fragment_my_page.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageView4"
             android:layout_width="800dp"
             android:layout_height="300dp"
-            android:src="@drawable/mypage_header"
+            android:src="@drawable/mypage_header_owner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -264,8 +264,8 @@
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="32dp"
                     android:src="@drawable/mypage_editmy_btn"
