--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -160,6 +160,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
 
+        <FrameLayout
+            android:id="@+id/search_loading_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminateTint="@color/green" />
+        </FrameLayout>`
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
