--- a/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
@@ -8,11 +8,13 @@
     tools:context=".ui.order.OrderRecipeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/order_recipe_fragment_ccc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="24dp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/noti_fg_back_icon"
@@ -79,14 +81,12 @@
 
         </LinearLayout>
 
-        `
-
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/ligtgreen"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout2" />`
+            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout2" />
 
         <TextView
             android:id="@+id/fragment_order_recipe_tv_takeout"
@@ -154,8 +154,8 @@
                 android:id="@+id/order_recipe_fragment_complete_order_btn"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:background="@drawable/medium_red_button"
                 android:fontFamily="@font/pretendard_semibold"
                 android:text="주문 완료"
@@ -175,8 +175,6 @@
 
         </LinearLayout>
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
