[style] front - 마이페이지 css수정

--- a/reper_front/app/src/main/res/layout/fragment_my_page.xml
+++ b/reper_front/app/src/main/res/layout/fragment_my_page.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageView4"
             android:layout_width="800dp"
             android:layout_height="300dp"
-            android:src="@drawable/mypage_header_owner"
+            android:src="@drawable/mypage_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
