--- a/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
+++ b/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
@@ -35,6 +35,7 @@
 
 
         <GridLayout
+            android:id="@+id/gridLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -47,10 +48,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_rowSpan="1"
                 android:layout_columnSpan="1"
                 android:fontFamily="@font/pretendard_semibold"
                 android:text="카페인"
-                android:layout_rowSpan="1"
                 android:textColor="@color/darkgreen"
                 android:textSize="16sp" />
 
@@ -91,13 +92,13 @@
                 android:id="@+id/radio_milk"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
+                android:layout_marginEnd="40dp"
                 android:button="@null"
                 android:drawableLeft="@drawable/filter_radio_btn"
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:paddingStart="2dp"
                 android:text="우유"
-                android:layout_marginEnd="40dp"
                 android:textColor="@color/black"
                 android:textSize="16dp" />
 
@@ -122,13 +123,13 @@
                 android:layout_height="32dp"
                 android:layout_rowSpan="4"
                 android:layout_columnSpan="1"
+                android:layout_marginEnd="30dp"
                 android:button="@null"
                 android:drawableLeft="@drawable/filter_radio_btn"
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:paddingStart="2dp"
                 android:text="초콜릿"
-                android:layout_marginEnd="30dp"
                 android:textColor="@color/black"
                 android:textSize="16dp" />
 
@@ -192,14 +193,13 @@
             android:id="@+id/dialog_filter_cancel_btn"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
             android:background="@drawable/line_btn"
             android:fontFamily="@font/pretendard_semibold"
             android:text="취소"
             android:textColor="@color/darkgray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
